--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </footer>
 
     <!-- Project Modal -->
-    <div id="projectModal" class="modal">
+    <dialog id="projectModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 id="modalTitle"></h3>
@@ -153,29 +153,32 @@
             </div>
             <iframe id="projectFrame" src="" frameborder="0" allowfullscreen></iframe>
         </div>
-    </div>
+    </dialog>
 
     <script>
         function openProject(url, title) {
-            document.getElementById('projectModal').style.display = 'flex';
+            const modal = document.getElementById('projectModal');
+            modal.showModal();
             document.getElementById('projectFrame').src = url;
             document.getElementById('modalTitle').textContent = title;
-            document.body.style.overflow = 'hidden';
         }
 
         function closeProject() {
-            document.getElementById('projectModal').style.display = 'none';
+            const modal = document.getElementById('projectModal');
+            modal.close();
             document.getElementById('projectFrame').src = '';
-            document.body.style.overflow = '';
         }
 
-        // Close modal when clicking outside the content
-        window.onclick = function (event) {
-            const modal = document.getElementById('projectModal');
-            if (event.target === modal) {
+        // Close modal when clicking on backdrop
+        document.getElementById('projectModal').addEventListener('click', (event) => {
+            const modal = event.currentTarget;
+            const rect = modal.getBoundingClientRect();
+            const isInDialog = (rect.top <= event.clientY && event.clientY <= rect.top + rect.height &&
+                rect.left <= event.clientX && event.clientX <= rect.left + rect.width);
+            if (!isInDialog) {
                 closeProject();
             }
-        }
+        });
 
         // Close modal with Escape key
         document.addEventListener('keydown', function (event) {
